mage_api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mage-api-deployment
  namespace:
  labels:
    app: mage-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mage-api
  template:
    metadata:
      labels:
        app: mage-api
    spec:
      containers:
      - name: mage-api
        image: scr4pp/mage-api
        ports:
        - name: api
          containerPort: 8000
        imagePullPolicy: IfNotPresent
