mage_api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mage-api-service
  namespace:
spec:
  selector:
    app: mage-api
  ports:
    - name: api
      protocol: TCP
      port: 49155
      targetPort: api
  type: ClusterIP
